--- a/index.html
+++ b/index.html
@@ -14,3 +14,13 @@
 </body>
 
 </html>
+
+<!--
+
+- Usa localstorage, pinia y demas para mantener datos localmente y eliminarlos cuando el ususario salga de la web
+
+- Crea un login con los datos del usuario en data.js, crea una vista donde se elija una version de las variantes y manten esta por defecto hasta que el usuario salga de la web
+
+- De ser necesario modifica los datos de data.js
+
+--->
