feat: actualizar enlace de la demo a la página de construcción

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                         class="bg-[#58CC02] hover:bg-[#4bb802] text-white font-bold py-3 px-6 rounded-lg text-center transition duration-300">
                         Descargar App
                     </a>
-                    <a href="https://tlahtolli.netlify.app/" target="_blank"
+                    <a href="/building.html" target="_blank"
                         class="bg-transparent hover:bg-[#cc348d] text-white font-bold py-3 px-6 border-2 border-[#cc348d] rounded-lg text-center transition duration-300">
                         Probar Demo
                     </a>
