feat: ajustar el espaciado superior en el contenedor de la sección de características

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     </a>
                 </div>
             </div>
-            <div class="md:w-1/2 flex justify-center pb-0">
+            <div class="md:w-1/2 flex justify-center pt-10 md:pt-0 pb-0">
                 <div class="relative">
                     <div
                         class="absolute -top-6 -left-6 w-32 h-32 bg-[#A560E8] rounded-full mix-blend-multiply filter blur-xl opacity-70 transition-all duration-700 hover:bg-[#FF4B4B] hover:rotate-180 hover:scale-125 md:hover:scale-150">
