fix: actualizar enlaces de la demo a la URL completa de Netlify

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                         class="bg-[#58CC02] hover:bg-[#4bb802] text-white font-bold py-3 px-6 rounded-lg text-center transition duration-300">
                         Descargar App
                     </a>
-                    <a href="tlahtolli.netlify.app/" target="_blank"
+                    <a href="https://tlahtolli.netlify.app" target="_blank"
                         class="bg-transparent hover:bg-[#cc348d] text-white font-bold py-3 px-6 border-2 border-[#cc348d] rounded-lg text-center transition duration-300">
                         Probar Demo
                     </a>
@@ -572,7 +572,7 @@
                 "></div>
                 <h3 class="text-xl font-bold mb-4">¿Prefieres la versión web?</h3>
                 <p class="mb-6">Prueba nuestra demo directamente en tu navegador sin necesidad de descargar nada.</p>
-                <a href="tlahtolli.netlify.app/" target="_blank"
+                <a href="https://tlahtolli.netlify.app" target="_blank"
                     class="bg-[#cc348d] hover:bg-[#9b1f5a] text-white font-bold py-3 px-6 rounded-lg inline-block transition duration-300">
                     Probar Demo Web
                 </a>
