--- a/f/index.html
+++ b/f/index.html
@@ -3,19 +3,19 @@
 
 <head>
   <meta charset="UTF-8" />
-  <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
-
-  <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-  <link rel="shortcut icon" href="/favicon.ico" />
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-  <link rel="manifest" href="/site.webmanifest" />
-
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Iconos -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+
+  <!-- Colores del tema -->
+  <meta name="theme-color" content="#0a2136" />
+  <meta name="msapplication-TileColor" content="#0a2136" />
+
   <title>Tlahtolli</title>
-
-
-
 </head>
 
 <body>
@@ -24,13 +24,3 @@
 </body>
 
 </html>
-
-<!--
-
-- Usa localstorage, pinia y demas para mantener datos localmente y eliminarlos cuando el ususario salga de la web
-
-- Crea un login con los datos del usuario en data.js, crea una vista donde se elija una version de las variantes y manten esta por defecto hasta que el usuario salga de la web
-
-- De ser necesario modifica los datos de data.js
-
---->
